Fixing javascript issues on event listing pages

--- a/webroot/css/daterangepicker.css
+++ b/webroot/css/daterangepicker.css
@@ -1,15 +1,9 @@
-.daterangepicker_input .glyphicon-calendar:before {
-    font-size: 12px;
-    vertical-align: text-top;
-    color: #000000;
-}
-
 .daterangepicker {
   position: absolute;
   color: inherit;
-  background: #fff;
+  background-color: #fff;
   border-radius: 4px;
-  width: 278px;
+  width: 330px;
   padding: 4px;
   margin-top: 1px;
   top: 100px;
@@ -31,9 +25,9 @@
     border-bottom: 6px solid #fff;
     border-left: 6px solid transparent; }
   .daterangepicker.opensleft:before {
-    left: 20%; }
+    right: 9px; }
   .daterangepicker.opensleft:after {
-    left: 20%; }
+    right: 10px; }
   .daterangepicker.openscenter:before {
     left: 0;
     right: 0;
@@ -83,11 +77,11 @@
     border: 1px solid #fff;
     padding: 4px;
     border-radius: 4px;
-    background: #fff; }
+    background-color: #fff; }
   .daterangepicker table {
+    font-size: 12px;
     width: 100%;
-    margin: 0; 
-    font-size: 12px}
+    margin: 0; }
   .daterangepicker td, .daterangepicker th {
     text-align: center;
     width: 20px;
@@ -190,7 +184,7 @@
     width: 100%; }
   .ranges li {
     font-size: 13px;
-    background: #f5f5f5;
+    background-color: #f5f5f5;
     border: 1px solid #f5f5f5;
     border-radius: 4px;
     color: #08c;
@@ -198,21 +192,20 @@
     margin-bottom: 8px;
     cursor: pointer; }
     .ranges li:hover {
-      background: #08c;
+      background-color: #08c;
       border: 1px solid #08c;
       color: #fff; }
     .ranges li.active {
-      background: #08c;
+      background-color: #08c;
       border: 1px solid #08c;
       color: #fff; }
 
 /*  Larger Screen Styling */
 @media (min-width: 564px) {
   .daterangepicker {
-    width: 500px;
-    min-width: 350px }
+    width: auto; }
     .daterangepicker .ranges ul {
-      width: 98%; }
+      width: 160px; }
     .daterangepicker.single .ranges ul {
       width: 100%; }
     .daterangepicker.single .calendar.left {
@@ -268,8 +261,7 @@
         float: right; } }
 @media (min-width: 730px) {
   .daterangepicker .ranges {
-    width: auto;
-    min-width: 98% }
+    width: auto; }
   .daterangepicker.ltr .ranges {
     float: left; }
   .daterangepicker.rtl .ranges {
