--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -393,7 +393,7 @@ width:100%;
 .profile-img{
   margin: 5px 10px 10px 0px
 }
-.glyphicon-calendar:before {
+/*.glyphicon-calendar:before {
     font-size: 30px;
     vertical-align: middle;
     margin-right: 10px;
@@ -410,7 +410,7 @@ width:100%;
 }
 .time_txt{
     vertical-align: middle;
-}
+}*/
 .cover-detail{
   background-color: #4C96C7;
   color: #ffffff;
@@ -910,13 +910,13 @@ h3.heading > span, .h3.heading > span {
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 1);
 }
 
-.side_panel .glyphicon-calendar:before {
+/*.side_panel .glyphicon-calendar:before {
     font-size: 18px;
     vertical-align: sub;
     margin-right: 2px;
     color: #333333;
 }
-
+*/
 #reportrange{
   background: #fff; 
   cursor: pointer; 
@@ -1013,4 +1013,13 @@ position: absolute; top: 0px; left: 0px; border-color: transparent; box-shadow: 
 .profile_img, .create_evt{
   margin-bottom: 10px
 }
+}
+
+.auto-search {
+  border-radius: 0 !important;
+}
+@media (max-width: 412px) {
+  .side-panel-home {
+    margin-right: 15px;
+  }
 }
