--- a/webroot/css/checkbox.css
+++ b/webroot/css/checkbox.css
@@ -101,7 +101,7 @@
     top: 58px;
     background-color: #4abac5;
     color: #ffffff;
-    padding: 0px 10px;
+    padding: 7px 10px;
     z-index: 99;
     float: none;
     width: 735px;
@@ -109,7 +109,7 @@
 }
 .list-group .checkbox{
     position: relative;
-    display: inline-block;
+   /* display: inline-block;*/
     margin: 10px 10px 10px 0px;
 }
 
@@ -121,6 +121,6 @@
     cursor: pointer;
 }
 .list-group .checkbox label {
-  text-transform:uppercase;
+  /*text-transform:uppercase;*/
   font-size:13px
 }
