--- a/webroot/css/bootstrap-tagsinput.css
+++ b/webroot/css/bootstrap-tagsinput.css
@@ -13,6 +13,7 @@
   padding: 6px 12px;
   transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
   width: 400px;
+
 }
 .bootstrap-tagsinput input {
   border: none;
@@ -21,8 +22,10 @@
   background-color: transparent;
   padding: 0 6px;
   margin: 0;
-  width: 100%;
+  width: auto;
   max-width: inherit;
+  min-width: 100%;
+  height: 26px;
 }
 .bootstrap-tagsinput.form-control input::-moz-placeholder {
   color: #777;
