--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -711,3 +711,41 @@ h3.heading > span,
     float: left;
     margin-right: 20px;
 }
+.f-item {
+  background-color: #5bc0de;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-size: 11px;
+  margin: 0 5px 5px 0;
+  padding: 5px 5px 0;
+  width: auto;
+  display: none;
+  text-transform: capitalize;
+}
+.f-sections {
+  border-color: #f0f0f0;
+  border-image: none;
+  border-style: solid;
+  border-width: 0 0 1px;
+  display: block;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  display: none;
+  width: 100%;
+}
+#filterClearAll:hover, #filterClearAll:focus {
+  text-decoration: none;
+} 
+.bootstrap-tagsinput::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+.bootstrap-tagsinput::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.bootstrap-tagsinput::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
