--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -117,6 +117,13 @@ body {
         color: #ffffff;
     }
 }
+@media (max-width: 767px) {
+    .nav .category_btn {
+        padding: 11px 20px !important;
+        background-color: #337ab7;
+        color: #ffffff;
+    }
+}
 @media (min-width: 992px) {
     .col-md-offset-3 {
         margin-left: 25%!important;
@@ -734,18 +741,20 @@ h3.heading > span,
   display: none;
   width: 100%;
 }
-#filterClearAll:hover, #filterClearAll:focus {
+#filterClearAll:hover, #filterClearAll:focus, #filterDD:hover, #filterDD:focus {
   text-decoration: none;
-} 
-.bootstrap-tagsinput::-webkit-scrollbar {
-    width: 1em;
 }
- 
-.bootstrap-tagsinput::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+#filterClearAll {
+  padding-right: 10px;
 }
- 
-.bootstrap-tagsinput::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+@media (max-width: 900px) {
+    .navbar {
+        margin-bottom: 0px !important;
+    }
+}
+.filter-panel-body {
+    display: none;
+}
+.bs-example .panel-heading {
+    border-radius: 0 !important;
 }
