--- a/webroot/css/loginstyle.css
+++ b/webroot/css/loginstyle.css
@@ -480,3 +480,7 @@ ul.social li a:hover i { -moz-transform: rotate(360deg); -webkit-transform: rota
   margin:0px !important;
   padding: 5px 0 15px !important;
 }
+em.error {
+  margin-bottom: 0 !important;
+  text-align: left !important;
+}
