--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -189,7 +189,7 @@ footer {
 .event_txt a {
     text-transform: none;
     color: #ffffff;
-    font-size:17px;
+    font-size:19px;
 }
 .venue_txt {} .date_txt {} .clearfix:after {
     clear: both;
@@ -709,7 +709,7 @@ h3.heading > span,
 .event-title {
     float: left;
     margin-bottom: 8px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
