--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -877,6 +877,11 @@ h3.heading > span,
     height:100px;
     overflow-y: scroll;
     overflow-x: hidden;
+    width:295px;
+}
+.ui-menu-item-wrapper:hover{
+    background-color: #4ABAC5 !important;
+    border-color: #e2e2e2 !important;
 }
 .mob-category-list .mob-cs-cat:hover {
     cursor: pointer;
