--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -419,8 +419,8 @@ footer {
     color: #ffffff;
 }
 .margin25 {
-    margin-bottom: 25px;
-    margin-top: 25px;
+    margin-bottom: 15px;
+    margin-top: 31px;
 }
 .rgt_container {
     padding: 0px;
@@ -733,10 +733,11 @@ h3.heading > span,
 .event-title {
     float: left;
     margin-bottom: 8px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
+    height: 23px;
 }
 .launch-map {
     margin-top: 10px;
@@ -833,7 +834,7 @@ h3.heading > span,
     padding: 15px;
 }
 .mobile-footer .container div a {
-    color: #0B4360;
+    color: #F7F7F7;
 }
 .mobile-footer .container div a:hover {
     text-decoration: none;
