booking and free events filter button added for event listing page

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -978,3 +978,6 @@ and (max-device-width : 1024px) {
 .dropdown-content {
     z-index: 1514 !important;
 }
+.filter-buttons {
+    margin-top: 10px;
+}
