--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -988,3 +988,6 @@ and (max-device-width : 1024px) {
     margin-right: 10px;
     color: #fff;
 }
+.background-container.head-container {
+    box-shadow: 0px 2px 4px #e6e4e4;
+}
