--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -988,6 +988,27 @@ and (max-device-width : 1024px) {
     margin-right: 10px;
     color: #fff;
 }
+@media (max-width: 600px)
+{
+.tc-buttons .btn{
+    margin-top: 10px;
+    width: 45%;
+    white-space: initial;
+}
+.break {
+    display:block !important;
+    clear:both !important;
+}
+.redirect-city{
+    float: left !important;
+    margin-top: 10px;
+}
+}
+.break {
+    display:none;
+    clear:both;
+}
+
 .background-container.head-container {
     box-shadow: 0px 2px 4px #e6e4e4;
 }
