--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -304,8 +304,12 @@ input:checked + .slider:before {
 }
 
 @media (min-width: 1024px) and (max-width: 1365px) {
-    .search-box .search-text-box input {
+    /*.search-box .search-text-box input {
         width: 15rem !important;
+    }*/
+    .search-box .search-text-box input {
+        width: 20rem !important;
+        font-size: 15px;
     }
     .nav-cs-action .btn {
         padding: .5rem .5rem !important;
@@ -320,11 +324,11 @@ input:checked + .slider:before {
         display: flex;
     }
     .search-box .nav-city-link {
-        margin-left: 0 !important;
+        margin-left: 1rem !important;
     }
-    .navbar-brand img {
+    /*.navbar-brand img {
         width: 200px !important;
-    }
+    }*/
 }
 @media (min-width: 768px) and (max-width: 1023px) {
     .collapse {
@@ -401,5 +405,16 @@ input:checked + .slider:before {
         transform: translateY(0%) translateX(-29%);        
         position: absolute;
         width: auto !important;
+    }
+}
+.cs_create_btn{
+    background-color: #258fc6 !important;
+}
+.cs_login_btn{
+    background-color: #4abac5 !important;
+}
+@media (min-width: 1900px){
+    .search-box{
+        margin-left: 20px;
     }
 }
