--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -8,6 +8,7 @@
 }
 .event-list .card-size .card {
     box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;
+    background-color: #f4f4f4;
 }
 .event-list #loading {
     background: #fff url("../img/ajax-loader.gif") no-repeat scroll center center;
@@ -116,7 +117,7 @@
     color: #474747;
 }
 .cs-fav-icons{
-    width: 100px;    
+    width: 70px;    
 }
 .cs-fav-icons-div{
     display: inline-block;
@@ -125,6 +126,12 @@
 .cs-fav-icons-div p{
     text-align: center;
     color: #474747;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
+    white-space: nowrap !important;
+    width: 90px !important;
+
+
 }
 .carousel .carousel-control-prev-icon.prev {
     background-image: url("../img/arrow_left_black.svg") !important;
@@ -135,3 +142,73 @@
 .carousel-control-next.cs-arrow, .carousel-control-prev.cs-arrow {
     width: auto !important;
 }
+.cs_dispimg{
+    padding: 7px;
+    border-radius: 0.9rem !important;
+}
+    .lap-fav, .ipad-fav, .ipadpro-fav, .mob-fav{
+        display: none;
+    }
+        @media (max-width: 1366px){
+        .cs-fav-icons-div{
+            padding: 15px;
+        }
+        .desk-fav, .ipad-fav, .ipadpro-fav, .mob-fav{
+            display: none;
+        }
+        .lap-fav{
+        display: block;
+        }
+        @media (device-width: 1366px){
+        .cs-fav-icons-div{
+            padding: 20px;
+        }
+}
+    @media (device-width: 768px) and (device-height: 1024px){
+        .ipad-fav{
+            display: block !important;
+        }
+         .lap-fav{
+        display: none;
+    }
+    .ipadpro-fav, .mob-fav{
+            display: none !important;
+        }
+        .cs-fav-icons-div p {
+            overflow: hidden;
+            text-overflow: ellipsis !important;
+            white-space: nowrap !important;
+            width: 100px !important;
+        }
+    }
+    @media (max-width: 1024px){
+        .ipadpro-fav{
+            display: block;
+        }
+        .ipad-fav{
+            display: none;
+        }
+         .lap-fav, .mob-fav{
+        display: none;
+        }
+        .cs-fav-icons-div p {
+            overflow: hidden;
+            text-overflow: ellipsis !important;
+            white-space: nowrap !important;
+            width: 100px !important;
+        }
+    }
+    @media (max-width: 420px){
+        .mob-fav{
+            display: block;
+        }
+        .desk-fav, .ipad-fav, .ipadpro-fav, .lap-fav{
+            display: none;
+        }
+        .cs-fav-icons-div p{          
+        overflow: hidden;
+        text-overflow: ellipsis !important;
+        white-space: nowrap !important;
+        width: 100px !important;
+        }
+    }
