--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -1,5 +1,6 @@
 .event-list {
 	min-height: 250px;
+    margin-top: 20px;
 }
 .event-list .card-size {
 	margin-bottom: 15px;
@@ -42,6 +43,11 @@
     margin-left: 7px;
     margin-right: 7px;
 }
+.event-list .filter-params .filter-clear-all {
+    box-shadow: none;
+    padding: 4px 7px;
+    text-transform: capitalize;
+}
 .event-list .card-title {
     line-height: 1 !important;
 }
@@ -56,7 +62,7 @@
     display: inline-block;
     margin-right: 10px;
     border: 1px solid #eee;
-    border-radius: 3px;
+    border-radius: 0;
     padding: 3px 10px;
     font-size: smaller;
     margin-bottom: 10px;
@@ -66,9 +72,9 @@
     padding: 4px 0 0 9px;
 }
 .event-filters .filter-tc-button {
-    padding-left: 10px !important;
-    padding-right: 10px !important;
-    margin-right: 10px !important;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 10px;
 }
 .event-filters .top-categories {
     padding-left: 20px;
@@ -93,6 +99,7 @@
     border: 1px solid #d4d4d4;
     font-size: 13px;
     text-transform: capitalize;
+    border-radius: 0;
 }
 .btn-default.cs-filter-btn:not([disabled]):not(.disabled):active{
     background-color: #e7e7e7  !important;
@@ -104,6 +111,7 @@
     border: 1px solid #d4d4d4;
     font-size: 13px;
     text-transform: capitalize;
+    border-radius: 0;
 }
 .btn.btn-sm.cs-btn-filter-paid{
     background-color: #e7e7e7 !important;
@@ -112,6 +120,7 @@
     border: 1px solid #d4d4d4;
     font-size: 13px;
     text-transform: capitalize;
+    border-radius: 0;
 }
 .cs-category-title.text-center{
     color: #474747;
@@ -142,73 +151,7 @@
 .carousel-control-next.cs-arrow, .carousel-control-prev.cs-arrow {
     width: auto !important;
 }
-.cs_dispimg{
-    padding: 7px;
-    border-radius: 0.9rem !important;
+
+.event-list .epage-title {
+    margin-bottom: 15px;
 }
-    .lap-fav, .ipad-fav, .ipadpro-fav, .mob-fav{
-        display: none;
-    }
-        @media (max-width: 1366px){
-        .cs-fav-icons-div{
-            padding: 15px;
-        }
-        .desk-fav, .ipad-fav, .ipadpro-fav, .mob-fav{
-            display: none;
-        }
-        .lap-fav{
-        display: block;
-        }
-        @media (device-width: 1366px){
-        .cs-fav-icons-div{
-            padding: 20px;
-        }
-}
-    @media (device-width: 768px) and (device-height: 1024px){
-        .ipad-fav{
-            display: block !important;
-        }
-         .lap-fav{
-        display: none;
-    }
-    .ipadpro-fav, .mob-fav{
-            display: none !important;
-        }
-        .cs-fav-icons-div p {
-            overflow: hidden;
-            text-overflow: ellipsis !important;
-            white-space: nowrap !important;
-            width: 100px !important;
-        }
-    }
-    @media (max-width: 1024px){
-        .ipadpro-fav{
-            display: block;
-        }
-        .ipad-fav{
-            display: none;
-        }
-         .lap-fav, .mob-fav{
-        display: none;
-        }
-        .cs-fav-icons-div p {
-            overflow: hidden;
-            text-overflow: ellipsis !important;
-            white-space: nowrap !important;
-            width: 100px !important;
-        }
-    }
-    @media (max-width: 420px){
-        .mob-fav{
-            display: block;
-        }
-        .desk-fav, .ipad-fav, .ipadpro-fav, .lap-fav{
-            display: none;
-        }
-        .cs-fav-icons-div p{          
-        overflow: hidden;
-        text-overflow: ellipsis !important;
-        white-space: nowrap !important;
-        width: 100px !important;
-        }
-    }
